# dolphin-server

./: .env  Cargo.toml  README.md  dump.py
src/: app.rs  config.rs  config_data.rs  edit_row.rs  editable_row.rs  error.rs  health.rs  landing.rs  lib.rs  load_balancer.rs  location.rs  locations.rs  login.rs  main.rs  ping.rs  register.rs  row.rs  service.rs  upload.rs
templates/: base.html  config.html  config_row.html  editable_row.html  landing.html  login.html  new_loc.html  row.html  settings.html
tests/: check_health.rs  landing.rs  ping.rs
