[package]
name = "dolphin_server"
authors = ["Rohan Janaki <srohanjd@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
argon2 = { version = "0.5.3", features = ["std"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros"] }
dashmap = "5.5.3"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
mdns-sd = "0.11.1"
serde = { version = "1.0.201", features = ["derive"] }
sqlx = {version = "0.7.4", features = [ "runtime-tokio", "tls-native-tls", "mysql", "time" ]}
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version= "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.8.0", features = ["fast-rng", "v4", "macro-diagnostics"] }

[dev-dependencies]
